--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-prefetch>
-		%sveltekit.body%
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
